--- a/globals.css
+++ b/globals.css
@@ -61,12 +61,19 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+    overflow-x: hidden;
 }
 
 
 @media only screen and (max-width: 600px) {
     #content {
+        padding: 0.5em;
         justify-content: start;
+    }
+
+    h1, h2 {
+        text-align: center;
     }
 
     h1 {
@@ -74,5 +81,19 @@ body {
     }
     h2 {
         font-size: 1.2em;
+    }
+
+    ul {
+        margin: 0.5em;
+        padding-left: 0.75em;
+    }
+
+    p {
+        text-align: justify;
+        hyphens: auto;
+    }
+
+    hr {
+        margin: 2em 0px;
     }
 }
